welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:6: error: not found: value isAleep
  if (!isMorning && !isAleep)
                     ^